# Akasha

./: AKASHA_RUNTIME.md  LICENSE  README.md  akasha-run
akasha-core/: memory.json  memory.ndjson  orchestrator.sh  orchestrator.sh.bak  requirements.sh
akasha-core/events/: 1447fb3c-f563-4173-81cd-a1bb995c7ac8.json  16623f67-3e55-47ba-b526-0d84c7075780.json  1c18a8d1-4902-40e2-a131-35b72bee8cee.json  4a701930-b694-436f-8674-56a0ba10c4a3.json  4ead46aa-67a2-4abc-8a46-ed4b0ac05b2d.json  6ae261a7-a2ce-4d47-9546-c9655abfa0e7.json  7382b335-354a-466d-9929-2a31069af361.json  78dfffcb-013d-43c3-8ddd-1425d28c21e4.json  900ac26d-08b4-43b0-9f1b-4ba0e77ba2e7.json  a960141c-555b-40fd-94e1-9508a7987dad.json  db1b0c16-7cb3-4458-a4b4-367acc8009cb.json  de295cad-7770-4038-8e72-fcf8b593f813.json  e58b4a92-01cc-4339-b3e6-c2ff1257b72c.json  ledger.db
akasha/akasha-aetherius/: AKASHA_ALIGNMENT.md  CHANGELOG.md  CONSTELLATION_ENTRY.md  README.md  install-debian.sh  pyproject.toml  repo-manifest.yaml
akasha/akasha-aetherius/backend/: aetherius_backend.py  aetherius_engine.py  aetherius_governor.py
akasha/akasha-aetherius/docs/: CONSTELLATION_PATCH.yaml
akasha/akasha-aetherius/frontend/: index.html  package.json
akasha/akasha-aetherius/frontend/src/: AetheriusDashboard.jsx  main.jsx
akasha/akasha-aetherius/tests/: test_smoke.py
akasha/akasha-alexandria/: AKASHA_ALIGNMENT.md  CHANGELOG.md  README.md  install-debian.sh  pyproject.toml  registry.yaml  repo-manifest.yaml  run.py
akasha/akasha-alexandria/alexandria/: invariants.py
akasha/akasha-alexandria/generators/: tasker_bridge_adapter.py
akasha/akasha-analogy-engine/: README.md  repo-manifest.yaml  request.json
akasha/akasha-anomaly/: README.md  TREE.txt  pyproject.toml  repo-manifest.yaml
akasha/akasha-anomaly/akasha_anomaly.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
akasha/akasha-anomaly/akasha_anomaly/cli/: log.py  pipeline.py
akasha/akasha-anomaly/docs/: ARCHITECTURE.md
akasha/akasha-anomaly/examples/: example_log.sh
akasha/akasha-anomaly/tests/: test_cli_smoke.py
akasha/akasha-apis/: repo-manifest.yaml
akasha/akasha-archetypes/: README.md  __init__.py  repo-manifest.yaml
akasha/akasha-atlas-engine/: README.md  repo-manifest.yaml
akasha/akasha-attractor/: repo-manifest.yaml
akasha/akasha-automaton/: CHANGELOG.md  CONSTELLATION_ENTRY.md  README.md  repo-manifest.yaml
akasha/akasha-axioms/: AKASHA_MUTATION.md  AMENDMENTS.md  AXIOMS.md  INTEGRATION_CONTRACT.md  INVARIANTS.md  INVARIANT_ENGINE.md  INVARIANT_INDEX.md  RCF_CALCULUS.md  README.md  repo-manifest.yaml
akasha/akasha-cantus/: CHANGELOG.md  CONSTELLATION_ENTRY.md  README.md  pyproject.toml  repo-manifest.yaml
akasha/akasha-cantus/cantus/: __init__.py  cli.py  compiler.py  dsl.py  midi.py  repl.py  tokenizer.py  vm.py
akasha/akasha-cantus/docs/: AKASHA_ALIGNMENT.md  CONSTELLATION_PATCH.yaml  PORTING_NOTES.md
akasha/akasha-cantus/examples/: danger.cantus  factorial.cantus  music.cantus
akasha/akasha-cantus/src/cantus/: compiler.py  dsl.py  repl.py  vm.py
akasha/akasha-cantus/tests/: test_cantus.py  test_smoke.py
akasha/akasha-discovery-great-discovery/: README.md  pyproject.toml  repo-manifest.yaml
akasha/akasha-discovery-great-discovery/docs/: AKASHA_ALIGNMENT.md  ARCHITECTURE.md  CONSTELLATION_PATCH.yaml  PORTING_NOTES.md
akasha/akasha-discovery-great-discovery/src/great_discovery/: driver.py
akasha/akasha-discovery-great-discovery/tests/: test_smoke.py
akasha/akasha-esce/: CHANGELOG.md  CONSTELLATION_ENTRY.md  README.md  pyproject.toml  repo-manifest.yaml  setup.py
akasha/akasha-esce/core/: esce_core.c
akasha/akasha-esce/python/esce/: __init__.py  cli.py  config.py  encoder.py  pipeline.py  plugin_loader.py
akasha/akasha-esce/python/esce/plugins/: __init__.py  base.py  hash_plugin.py  hmac_plugin.py  xor_plugin.py
akasha/akasha-esce/tests/: test_hash.py  test_pipeline.py
akasha/akasha-phase-engine/: README.md  install-debian.sh  pyproject.toml  repo-manifest.yaml
akasha/akasha-phase-engine/akasha_phase_engine/: __init__.py  app.py  cli.py  database.py  materials.py  pipeline.py
akasha/akasha-phase-engine/docs/: AKASHA_ALIGNMENT.md  design.md  request_origin.md
akasha/akasha-phase-engine/src/: main.py
akasha/akasha-phase-engine/tests/: test_api.py  test_discovery.py  test_graph.py  test_registry.py  test_serialization.py
(+273 files in other folders)
