[project]
name = "akasha-alexandria"
version = "9.1.0"
description = "Alexandria Temporal Kernel — Canonicalization Field. Akasha-canon member."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "PolyForm" }
keywords = [
    "temporal", "kernel", "event-sourcing", "canonicalization",
    "constraints", "akasha", "truth-engine", "ledger"
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.22"]
dev = ["pytest>=7.0"]

[project.scripts]
alexandria = "alexandria.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["alexandria*", "generators*", "api*"]
