[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akasha-esce"
version = "1.1.0"
description = "Extensible Stream Cipher Engine — Akasha Constellation organ, transformation layer"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
esce = "esce.cli:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
